222 open file dialog should remember last visited folder (#238)
* Added dynamic settings for the last visited folder - geohammer.settings.saver.last_open_folder

* Added testfx tests for the ProfileScroll and SensorLineChart.